Practice/Ingress/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod1
  labels:
    pod: pod1
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: pod1
  template:
    metadata:
      labels:
        pod: pod1
    spec:
      containers:
        - name: pod1
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod1-service
spec:
  selector:
    pod: pod1
  ports:
    - protocol: TCP
      port: 80
