Practice/Ingress/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod2
  labels:
    pod: pod2
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: pod2
  template:
    metadata:
      labels:
        pod: pod2
    spec:
      containers:
        - name: pod2
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod2-service
spec:
  selector:
    pod: pod2
  ports:
    - protocol: TCP
      port: 80
