Practice/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /one
            pathType: Prefix
            backend:
              service:
                name: pod1-service
                port:
                  number: 80
          - path: /two
            pathType: Prefix
            backend:
              service:
                name: pod2-service
                port:
                  number: 80
